--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1988,15 +1988,15 @@ a {
   text-align: center;
   color: #ffffff;
 }
-.cid-ucGvHTKl8k {
-  padding-top: 2rem;
-  padding-bottom: 0rem;
+.cid-ugrmYtB1XX {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
   background-color: #ffffff;
 }
-.cid-ucGvHTKl8k .mbr-fallback-image.disabled {
+.cid-ugrmYtB1XX .mbr-fallback-image.disabled {
   display: none;
 }
-.cid-ucGvHTKl8k .mbr-fallback-image {
+.cid-ugrmYtB1XX .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
@@ -2005,143 +2005,31 @@ a {
   position: absolute;
   top: 0;
 }
-.cid-ucGvHTKl8k .mbr-section-subtitle {
-  text-align: center;
+@media (max-width: 991px) {
+  .cid-ugrmYtB1XX .image-wrapper {
+    margin-bottom: 1rem;
+  }
 }
-.cid-ucGuKxlN5I {
-  padding-top: 0rem;
-  padding-bottom: 0rem;
-  background-color: #ffffff;
+.cid-ugrmYtB1XX .row {
+  flex-direction: row-reverse;
+}
+.cid-ugrmYtB1XX img {
+  width: 100%;
 }
 @media (min-width: 992px) {
-  .cid-ucGuKxlN5I .carousel {
-    min-height: 800px;
-  }
-  .cid-ucGuKxlN5I .carousel img {
-    max-height: 800px;
-    object-fit: contain;
+  .cid-ugrmYtB1XX .text-wrapper {
+    padding: 2rem;
   }
 }
-@media (max-width: 991px) and (min-width: 768px) {
-  .cid-ucGuKxlN5I .carousel {
-    min-height: 520px;
-  }
-  .cid-ucGuKxlN5I .carousel img {
-    max-height: 520px;
-    object-fit: contain;
-  }
-}
-@media (max-width: 767px) {
-  .cid-ucGuKxlN5I .carousel {
-    min-height: 440px;
-  }
-  .cid-ucGuKxlN5I .carousel img {
-    max-height: 440px;
-    object-fit: contain;
-  }
-  .cid-ucGuKxlN5I .container .carousel-control {
-    margin-bottom: 0;
-  }
-  .cid-ucGuKxlN5I .content-slider-wrap {
-    width: 100% !important;
-  }
-}
-.cid-ucGuKxlN5I .carousel,
-.cid-ucGuKxlN5I .carousel-inner {
-  display: flex;
-  align-items: center;
-}
-.cid-ucGuKxlN5I .item-wrapper {
-  width: 100%;
-}
-.cid-ucGuKxlN5I .carousel-caption {
-  bottom: 40px;
-}
-.cid-ucGuKxlN5I .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
-}
-.cid-ucGuKxlN5I .mobi-mbri-arrow-next {
-  margin-left: 5px;
-}
-.cid-ucGuKxlN5I .mobi-mbri-arrow-prev {
-  margin-right: 5px;
-}
-.cid-ucGuKxlN5I .container .carousel-indicators {
-  margin-bottom: 3px;
-}
-.cid-ucGuKxlN5I .carousel-control {
-  top: 50%;
-  width: 60px;
-  height: 60px;
-  margin-top: -1.5rem;
-  font-size: 22px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all 0.3s;
-}
-.cid-ucGuKxlN5I .carousel-control.carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-ucGuKxlN5I .carousel-control.carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-@media (max-width: 767px) {
-  .cid-ucGuKxlN5I .carousel-control {
-    top: auto;
-    bottom: 1rem;
-  }
-}
-.cid-ucGuKxlN5I .carousel-indicators {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 1.5rem !important;
-}
-.cid-ucGuKxlN5I .carousel-indicators li {
-  max-width: 15px;
-  height: 15px;
-  width: 15px;
-  max-height: 15px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: 0.5;
-  transition: all 0.3s;
-}
-.cid-ucGuKxlN5I .carousel-indicators li.active,
-.cid-ucGuKxlN5I .carousel-indicators li:hover {
-  opacity: 0.9;
-}
-.cid-ucGuKxlN5I .carousel-indicators li::after,
-.cid-ucGuKxlN5I .carousel-indicators li::before {
-  content: none;
-}
-.cid-ucGuKxlN5I .carousel-indicators.ie-fix {
-  left: 50%;
-  display: block;
-  width: 60%;
-  margin-left: -30%;
-  text-align: center;
-}
-@media (max-width: 768px) {
-  .cid-ucGuKxlN5I .carousel-indicators {
-    display: none !important;
-  }
-}
-.cid-ucGtPdhnCF {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+.cid-ugrmWF6yNA {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
   background-color: #ffffff;
 }
-.cid-ucGtPdhnCF .mbr-fallback-image.disabled {
+.cid-ugrmWF6yNA .mbr-fallback-image.disabled {
   display: none;
 }
-.cid-ucGtPdhnCF .mbr-fallback-image {
+.cid-ugrmWF6yNA .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
@@ -2150,15 +2038,28 @@ a {
   position: absolute;
   top: 0;
 }
-.cid-ucGtPFJn0i {
-  padding-top: 0px;
-  padding-bottom: 0px;
+@media (max-width: 991px) {
+  .cid-ugrmWF6yNA .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-ugrmWF6yNA img {
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-ugrmWF6yNA .text-wrapper {
+    padding: 2rem;
+  }
+}
+.cid-ugrni8ZFQj {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
   background-color: #ffffff;
 }
-.cid-ucGtPFJn0i .mbr-fallback-image.disabled {
+.cid-ugrni8ZFQj .mbr-fallback-image.disabled {
   display: none;
 }
-.cid-ucGtPFJn0i .mbr-fallback-image {
+.cid-ugrni8ZFQj .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
@@ -2167,40 +2068,210 @@ a {
   position: absolute;
   top: 0;
 }
-.cid-ucGtPFJn0i .row {
-  align-items: stretch;
-  justify-content: center;
-}
-.cid-ucGtPFJn0i .row .img-item {
-  display: -webkit-flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 100%;
-}
-.cid-ucGtPFJn0i .row .img-item img {
-  width: 100%;
-  object-fit: cover;
-  min-height: 1px;
-}
-.cid-ucGtPFJn0i img,
-.cid-ucGtPFJn0i .item-img {
-  width: 100%;
-  object-position: 50% top;
-  height: 500px;
-  object-fit: cover;
-}
-@media (max-width: 767px) {
-  .cid-ucGtPFJn0i img,
-  .cid-ucGtPFJn0i .item-img {
-    max-height: 350px;
+@media (max-width: 991px) {
+  .cid-ugrni8ZFQj .image-wrapper {
+    margin-bottom: 1rem;
   }
 }
-.cid-ucGtPFJn0i H5 {
-  text-align: center;
+.cid-ugrni8ZFQj .row {
+  flex-direction: row-reverse;
 }
-.cid-ucGtPFJn0i .mbr-text,
-.cid-ucGtPFJn0i .mbr-section-btn {
-  text-align: center;
+.cid-ugrni8ZFQj img {
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-ugrni8ZFQj .text-wrapper {
+    padding: 2rem;
+  }
+}
+.cid-ugrniM1WkA {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  background-color: #ffffff;
+}
+.cid-ugrniM1WkA .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-ugrniM1WkA .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+@media (max-width: 991px) {
+  .cid-ugrniM1WkA .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-ugrniM1WkA img {
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-ugrniM1WkA .text-wrapper {
+    padding: 2rem;
+  }
+}
+.cid-ugrnEaRtHR {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  background-color: #ffffff;
+}
+.cid-ugrnEaRtHR .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-ugrnEaRtHR .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+@media (max-width: 991px) {
+  .cid-ugrnEaRtHR .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-ugrnEaRtHR .row {
+  flex-direction: row-reverse;
+}
+.cid-ugrnEaRtHR img {
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-ugrnEaRtHR .text-wrapper {
+    padding: 2rem;
+  }
+}
+.cid-ugrnEAjA7f {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  background-color: #ffffff;
+}
+.cid-ugrnEAjA7f .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-ugrnEAjA7f .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+@media (max-width: 991px) {
+  .cid-ugrnEAjA7f .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-ugrnEAjA7f img {
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-ugrnEAjA7f .text-wrapper {
+    padding: 2rem;
+  }
+}
+.cid-ugrnF5JVjF {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  background-color: #ffffff;
+}
+.cid-ugrnF5JVjF .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-ugrnF5JVjF .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+@media (max-width: 991px) {
+  .cid-ugrnF5JVjF .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-ugrnF5JVjF .row {
+  flex-direction: row-reverse;
+}
+.cid-ugrnF5JVjF img {
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-ugrnF5JVjF .text-wrapper {
+    padding: 2rem;
+  }
+}
+.cid-ugrnFKVCei {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  background-color: #ffffff;
+}
+.cid-ugrnFKVCei .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-ugrnFKVCei .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+@media (max-width: 991px) {
+  .cid-ugrnFKVCei .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-ugrnFKVCei img {
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-ugrnFKVCei .text-wrapper {
+    padding: 2rem;
+  }
+}
+.cid-ugroINgAXW {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  background-color: #ffffff;
+}
+.cid-ugroINgAXW .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-ugroINgAXW .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+@media (max-width: 991px) {
+  .cid-ugroINgAXW .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-ugroINgAXW .row {
+  flex-direction: row-reverse;
+}
+.cid-ugroINgAXW img {
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-ugroINgAXW .text-wrapper {
+    padding: 2rem;
+  }
 }
 .cid-udAGbOAF1a {
   padding-top: 1rem;
