create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1935,15 +1935,15 @@ a {
     padding: 2rem;
   }
 }
-.cid-ugrnEAjA7f {
+.cid-ugryCKNTJU {
   padding-top: 3rem;
-  padding-bottom: 3rem;
+  padding-bottom: 0rem;
   background-color: #ffffff;
 }
-.cid-ugrnEAjA7f .mbr-fallback-image.disabled {
+.cid-ugryCKNTJU .mbr-fallback-image.disabled {
   display: none;
 }
-.cid-ugrnEAjA7f .mbr-fallback-image {
+.cid-ugryCKNTJU .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
@@ -1953,15 +1953,15 @@ a {
   top: 0;
 }
 @media (max-width: 991px) {
-  .cid-ugrnEAjA7f .image-wrapper {
+  .cid-ugryCKNTJU .image-wrapper {
     margin-bottom: 1rem;
   }
 }
-.cid-ugrnEAjA7f img {
+.cid-ugryCKNTJU img {
   width: 100%;
 }
 @media (min-width: 992px) {
-  .cid-ugrnEAjA7f .text-wrapper {
+  .cid-ugryCKNTJU .text-wrapper {
     padding: 2rem;
   }
 }
@@ -1998,15 +1998,15 @@ a {
     padding: 2rem;
   }
 }
-.cid-ugrnFKVCei {
+.cid-ugrza3Qz17 {
   padding-top: 3rem;
   padding-bottom: 3rem;
   background-color: #ffffff;
 }
-.cid-ugrnFKVCei .mbr-fallback-image.disabled {
+.cid-ugrza3Qz17 .mbr-fallback-image.disabled {
   display: none;
 }
-.cid-ugrnFKVCei .mbr-fallback-image {
+.cid-ugrza3Qz17 .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
@@ -2016,15 +2016,15 @@ a {
   top: 0;
 }
 @media (max-width: 991px) {
-  .cid-ugrnFKVCei .image-wrapper {
+  .cid-ugrza3Qz17 .image-wrapper {
     margin-bottom: 1rem;
   }
 }
-.cid-ugrnFKVCei img {
+.cid-ugrza3Qz17 img {
   width: 100%;
 }
 @media (min-width: 992px) {
-  .cid-ugrnFKVCei .text-wrapper {
+  .cid-ugrza3Qz17 .text-wrapper {
     padding: 2rem;
   }
 }
