--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1935,15 +1935,15 @@ a {
     padding: 2rem;
   }
 }
-.cid-ugryCKNTJU {
+.cid-ugrB0KtwDv {
   padding-top: 3rem;
-  padding-bottom: 0rem;
+  padding-bottom: 3rem;
   background-color: #ffffff;
 }
-.cid-ugryCKNTJU .mbr-fallback-image.disabled {
+.cid-ugrB0KtwDv .mbr-fallback-image.disabled {
   display: none;
 }
-.cid-ugryCKNTJU .mbr-fallback-image {
+.cid-ugrB0KtwDv .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
@@ -1953,15 +1953,15 @@ a {
   top: 0;
 }
 @media (max-width: 991px) {
-  .cid-ugryCKNTJU .image-wrapper {
+  .cid-ugrB0KtwDv .image-wrapper {
     margin-bottom: 1rem;
   }
 }
-.cid-ugryCKNTJU img {
+.cid-ugrB0KtwDv img {
   width: 100%;
 }
 @media (min-width: 992px) {
-  .cid-ugryCKNTJU .text-wrapper {
+  .cid-ugrB0KtwDv .text-wrapper {
     padding: 2rem;
   }
 }
@@ -1998,15 +1998,15 @@ a {
     padding: 2rem;
   }
 }
-.cid-ugrza3Qz17 {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+.cid-ugrAwv2KLM {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   background-color: #ffffff;
 }
-.cid-ugrza3Qz17 .mbr-fallback-image.disabled {
+.cid-ugrAwv2KLM .mbr-fallback-image.disabled {
   display: none;
 }
-.cid-ugrza3Qz17 .mbr-fallback-image {
+.cid-ugrAwv2KLM .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
@@ -2016,15 +2016,15 @@ a {
   top: 0;
 }
 @media (max-width: 991px) {
-  .cid-ugrza3Qz17 .image-wrapper {
+  .cid-ugrAwv2KLM .image-wrapper {
     margin-bottom: 1rem;
   }
 }
-.cid-ugrza3Qz17 img {
+.cid-ugrAwv2KLM img {
   width: 100%;
 }
 @media (min-width: 992px) {
-  .cid-ugrza3Qz17 .text-wrapper {
+  .cid-ugrAwv2KLM .text-wrapper {
     padding: 2rem;
   }
 }
